--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   --color-light-gray: #f0f0f0;
   --color-light-red: #dd7e92;
   --color-dark-gray: #383838;
-  --color-font-form-gray:#C4C4C4;
+  --color-font-form-gray: #c4c4c4;
   --color-radio-gray: #999999;
 }
 
@@ -31,32 +31,34 @@ body {
 .nav-container {
   background-color: var(--color-green);
   height: 90px;
-  width: 100%;
+  width: 300px;
   color: var(--color-white);
-  padding: 10px;
-}
+ 
+  }
 
 .nav-main {
-  margin: 0 auto;
+  margin-left: 10px;
+  margin-right: 10px;
   display: flex;
   align-items: center;
-  padding: 0;
-}
+  width: 280px;
+  justify-content: space-around;
+ 
+    
+
+  
+  }
 
 .nav-main h1 {
-  margin-left: 10px;
   color: var(--color-white);
-  width: 300px;
-}
+  }
 
 .nav-main img {
   width: 62px;
   height: 62px;
-  margin-right: 10px;
-}
+ }
 
 .container {
-  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
@@ -96,9 +98,7 @@ body {
   color: var(--color-dark-gray);
   margin: 3px 12px 0 13px;
   font-size: 12px;
-  font-weight: 700;
-  
-}
+  font-weight: 700;}
 
 .card-container h4 {
   color: var(--color-green);
@@ -119,7 +119,7 @@ body {
   font-size: 14px;
   font-weight: 700;
   color: var(--color-light-red);
-  margin: 0px 16px 12px 12px;
+  margin: 0px 16px 0px 12px;
 }
 
 button {
@@ -184,19 +184,18 @@ button {
 .form-container {
   width: 100%;
   max-width: 1200px;
-  margin: 0 10px 40px 10px;
+  margin: 0 10px 40px 0px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  }
+  
+}
 
-  .form-container h1 {
-    
-    font-size: 24px;
-    color: var(--color-gray);
-    margin: 40px 44px 16px 45px;
-    
-  }
+.form-container h1 {
+  font-size: 24px;
+  color: var(--color-gray);
+  margin: 40px 44px 16px 45px;
+}
 
 .div-form-container {
   width: 300px;
@@ -204,9 +203,10 @@ button {
   background-color: var(--color-light-gray);
   display: flex;
   height: 603px;
+  flex-direction: column;
   align-items: center;
   border-radius: 8px;
-  
+  padding: 35px 0 33px 0 ;
 }
 
 .button-customize {
@@ -214,56 +214,65 @@ button {
   width: 280px;
   height: 50px;
   font-size: 18px;
-  color : var(--color-font-form-gray);
-  margin: 0 10px 20px 10px;
+  color: var(--color-font-form-gray);
+  margin: 20px 10px 0 10px;
   border-radius: 4px;
   border: 1px solid var(--color-gray);
-  
- }
+  padding-left: 22px;
+}
 
- .div-form-container p {
+.div-form-container p {
   font-size: 16px;
   color: var(--color-gray);
   font-weight: 400px;
-  margin: 0 37px 0 10px;
- }
+  margin: 20px 37px 0 10px;
+}
 
- .radio-customize {
+.radio-customize {
   color: var(--color-gray);
   font-size: 16px;
   border-bottom: var(--color-radio-gray);
   display: flex;
-  
- }
+  margin-top: 7px;
+}
 
- .radio-customize > input[type=radio] {
+.radio-customize > input[type="radio"] {
   width: 23px;
   height: 23px;
   background: var(--color-white);
   border: 1px solid var(--color-radio-gray);
-  margin: 0 7px 8px 10px;
- }
- .checkbox-customize {
+  margin: 0 7px 0 10px;
+}
+.checkbox-customize {
   margin-top: 28px;
- }
+}
 
- .checkbox-customize > input[type=checkbox] {
+.checkbox-customize > input[type="checkbox"] {
   width: 23px;
   height: 23px;
   margin: 0 7px 28px 10px;
   border: 1px solid var(--color-radio-gray);
- }
-  
- .div-form-container button{
+}
+
+.div-form-container button {
   margin-left: 26px;
   margin-top: 20px;
- }
+}
 
- .button-reset > button[type=reset] {
+.button-reset > button[type="reset"] {
   background-color: var(--color-white);
-  
   color: var(--color-light-red);
- }
+}
 
-
-
+footer {
+  background-color: var(--color-dark-gray);
+  flex-direction: column;
+  width: 320px;
+  height: 302px;
+  font-size: 14px;
+  color:var(--color-white) ;
+  justify-content:space-between;
+  padding: 28px;
+  text-align: center;
+ 
+}
