--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,9 @@ body {
   align-items: center;
   width: 280px;
   justify-content: space-around;
- 
-    
-
   
   }
+
 
 .nav-main h1 {
   color: var(--color-white);
@@ -56,6 +54,10 @@ body {
 .nav-main img {
   width: 62px;
   height: 62px;
+  }
+
+ .menu-header a {
+  display: none;
  }
 
 .container {
@@ -133,7 +135,7 @@ button {
   
 }
 
-.games-container {
+.section-games {
   background-color: var(--color-light-gray);
   margin-top: 20px;
   width: 300px;
@@ -142,10 +144,12 @@ button {
   flex-direction: column;
 }
 
-.games-container h1 {
+.section-games h1 {
   font-size: 24px;
   color: var(--color-green);
   margin: 20px 123px 0 122px;
+  align-items: center;
+  display: flex;
 }
 
 .card-game {
@@ -156,19 +160,19 @@ button {
   margin: 20px 10px 0 10px;
 }
 
-.games-container h2 {
+.section-games h2 {
   font-size: 18px;
   color: var(--color-gray);
   margin: 27px 30px 0 30px;
 }
 
-.games-container p {
+.section-games p {
   color: var(--color-gray);
   font-size: 12px;
   margin: 0 26px 0 27px;
 }
 
-.games-container h3 {
+.section-games h3 {
   color: var(--color-green);
   font-size: 36px;
   font-weight: 700;
@@ -185,6 +189,7 @@ button {
   width: 100%;
   max-width: 1200px;
   margin: 0 10px 40px 0px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -276,3 +281,106 @@ footer {
   text-align: center;
  
 }
+
+@media (min-width: 1200px) {
+ 
+  .nav-container {
+    width: 1200px;
+    justify-content:space-between;
+  }
+    .nav-main {
+      width: 1200px;
+      
+            
+    }
+    .menu-header {
+      display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 24px;
+      }
+
+    
+    .nav-main a {
+    margin-top: 10px;
+    margin-right: 29px;
+    font-size: 14px;
+    display: block;
+   }
+   .lastest-news {
+    font-size: 24px;
+  }
+  .card-container {
+    width: 990px;
+    height: 247px;
+  }
+  .card-container h2 {
+    font-size: 24px;
+    }
+  
+  .card-container h3 {
+    font-size: 16px;
+  }
+  
+  .section-games {
+    width: 1200px;
+    height: 559px;
+            
+    }
+  .games-container h1 {
+    margin-top: 36px;
+    font-size: 36px;
+  }
+  .card-game {
+    width: 300px;
+    height: 326px;
+    }
+    .card-game img {
+      width: 300px;
+      height: 168.5px;
+     }
+     .game-container {
+      flex-direction: row;
+      display: flex;
+      align-items: center;
+      margin-top: 73px;
+      margin-bottom: 70px;
+     }
+     .div-form-container {
+      width: 790px;
+      height: 522px;
+      max-width: 1200px;
+      
+      }
+      .form-container h1 {
+        font-size: 36px;
+      }
+      .button-customize {
+        margin-left: 73px;
+        width: 642px;
+        font-size: 24px;
+      }
+      .div-form-container p {
+      margin-left: 72px;
+      }  
+      .radio-customize {
+        margin-left: 64px;
+      }
+      .checkbox-customize {
+        margin-left: 64px;
+      }
+
+      .button-row {
+        display: flex;
+        margin: 8px 125px 22px 125px;
+      }
+      footer {
+        flex-direction: row;
+        width: 1200px;
+        height: 190px;
+        justify-content:space-between;
+        padding: 105px;
+        text-align: center;
+}
+
